# MontionSense

./: .gitignore  CMakeLists.txt  DB.md  LICENSE  README.md  build.sh  sync_time.sh
docs/: db.md  storage.md  video.md  web.md
include/: db_comm.h  image_contx.h  sqlite_comm.h  storage_comm.h  util_comm.h  version.h  video.h  web_server.h
include/rkadk/: version.h
src/: db.c  main.c  main.cc  sqlite.c  sqlite.cc  storage.c  storage.cc  util_comm.c  util_comm.cc  video.c  video.cc  web_server.c
www/html/: LICENSE  README.md  index.html  readme.md
www/html/components/: calendar.html  playback.html  stream.html
www/html/css/: calendar.css  playback.css  styles.css
www/html/js/: calendar.js  calendarbk.js  playback.js  script.js
